<resources>
    <string name="app_name">Umeed</string>
    <string name="splash_screen">Made with </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_text">Welcome to UMEED</string>
    <string name="login_btn">Login</string>
    <string name="phone_number">Enter Phone number</string>
    <string name="password">Enter Password</string>
    <string name="name">Enter Name</string>
    <string name="location">Enter Location</string>
    <string name="managerId">Enter Manager ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="taskId">Enter Task ID</string>
    <string name="product">Enter Product</string>
    <string name="quantity">Enter Quantity</string>
    <string name="assign">Assign</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>