<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Assign Task"
            android:textStyle="bold"
            android:textSize="32dp"
            android:textColor="@color/umeed_dark"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:textColorHint="@color/dark_grey">

            <AutoCompleteTextView
                android:id="@+id/taskAssignment_et_taskId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/taskId"
                android:imeOptions="actionNext"
                android:inputType=""
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="@color/dark_grey"
                android:textIsSelectable="false"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:textColorHint="@color/dark_grey">

            <AutoCompleteTextView
                android:id="@+id/taskAssignment_et_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="@color/dark_grey"
                android:textIsSelectable="false"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:textColorHint="@color/dark_grey">

            <AutoCompleteTextView
                android:id="@+id/taskAssignment_et_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="@color/dark_grey"
                android:textIsSelectable="false"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:textColorHint="@color/dark_grey">

            <Spinner
                android:id="@+id/taskAssignment_et_worker"
                android:layout_width="149dp"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:prompt="@string/forgot_password" />

        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_margin="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style_two"
                android:text="@string/assign"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/addUser_bt_signIn"
                android:textSize="16sp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/umeed_dark"/>
            <ProgressBar
                android:visibility="gone"
                android:id="@+id/taskAssignment_pg_signIn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:indeterminateDrawable="@drawable/progress_two"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="60dp"
                />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>