<?xml version="1.0" encoding="utf-8"?>
<!-- 01. login -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text= "@string/login_text"
            android:textStyle="bold"
            android:textSize="28dp"
            android:textColor="@color/umeed_dark"
            android:id="@+id/welcome"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_religion"
                android:layout_toRightOf="@id/welcome"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/user"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_ed_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="@color/dark_grey"
                android:textIsSelectable="false"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"

                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="@color/dark_grey"
                android:textIsSelectable="false"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_margin="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_style"
                android:text="@string/login_btn"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/login_bt_login"
                android:textSize="16sp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/umeed_dark"/>
            <ProgressBar
                android:visibility="gone"
                android:id="@+id/login_pg_login"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:indeterminateDrawable="@drawable/progress_one"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="60dp"
                />

            <TextView
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_margin="32dp"
                android:gravity="right"
                android:textColor="@color/umeed_dark"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:textStyle="bold"/>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        >

    </LinearLayout>
</RelativeLayout>