<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Upload Progress"
            android:textStyle="bold"
            android:textSize="32dp"
            android:textColor="@color/umeed_dark"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:textColorHint="@color/dark_grey">

            <AutoCompleteTextView
                android:id="@+id/taskAssignment_et_taskId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/taskId"
                android:imeOptions="actionNext"
                android:inputType=""
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="@color/dark_grey"
                android:textIsSelectable="false"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:textColorHint="@color/dark_grey">

            <AutoCompleteTextView
                android:id="@+id/taskAssignment_et_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="@color/dark_grey"
                android:textIsSelectable="false"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:textColorHint="@color/dark_grey">

            <AutoCompleteTextView
                android:id="@+id/taskAssignment_et_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="@color/dark_grey"
                android:textIsSelectable="false"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:textColorHint="@color/dark_grey">

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:textColorHint="@color/dark_grey">

            <AutoCompleteTextView
                android:id="@+id/taskAssignment_et_grievance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter grievance if any"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="@color/dark_grey"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:text=""/>

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_margin="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style_two"
                android:text="Submit"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/addUser_bt_signIn"
                android:textSize="16sp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/umeed_dark"/>
            <ProgressBar
                android:visibility="gone"
                android:id="@+id/taskAssignment_pg_signIn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:indeterminateDrawable="@drawable/progress_two"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="60dp"
                />

        </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_margin="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style_two"
                    android:text="Capture"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:id="@+id/addUser_bt_capture"
                    android:textSize="16sp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/umeed_dark"/>
                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/taskAssignment_pg_capture"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:indeterminateDrawable="@drawable/progress_two"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginLeft="60dp"
                    />

            </RelativeLayout>

        </LinearLayout>
       <ImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center" />
    </LinearLayout>
</RelativeLayout>